--- a/iuca.tech.reserve/Web/wwwroot/css/colors.css
+++ b/iuca.tech.reserve/Web/wwwroot/css/colors.css
@@ -2,7 +2,7 @@
 :root {
     --bs-primary: #6c63ff;
     --bs-secondary: #808080;
-    --bs-success: #198754;
+    --bs-success: #3fa65c;
     --bs-danger: #ff6584;
     --bs-warning: #ffc107;
     --bs-info: #4bbebb;
